--- a/app/views/admin/members/_member.html.erb
+++ b/app/views/admin/members/_member.html.erb
@@ -1,4 +1,7 @@
-<tr class="record <%= cycle("on", "on-hover") %>">
+<% confirmation = RefinerySetting::find_or_set('memberships_confirmation', 'admin') %>
+<% timed = RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
+
+<tr data-row-id="<%= member.id %>" class="record <%= cycle("on", "on-hover") %>">
   <td><%= member.first_name %> <%= member.last_name %></td>
   <td><%= member.organization %></td>
   <td><%= member.email %></td>
@@ -7,41 +10,73 @@
   <td><%= member.member_until.nil? ? '--' : member.member_until.strftime('%d/%m/%Y') %></td>
   <% end %>
   <td>
-    <% if member.active? %>
-      <%= image_tag 'refinery/icons/tick.png', :tooltip => t('account_active', :scope => 'admin.members') %>
-    <% elsif member.is_new %>
-      <%= image_tag 'refinery/icons/new_account.png', :tooltip => t('new_account', :scope => 'admin.members') %>
-    <% elsif !member.enabled %>
-      <%= image_tag 'refinery/icons/cross.png', :tooltip => t('account_disabled', :scope => 'admin.members') %>
+    
+    
+    <% if member.disabled? && (confirmation != 'email' || member.confirmed?) %>
+    
+      <%= image_tag 'refinery/icons/user_locked.png', :tooltip => t('account_disabled', :scope => 'admin.members') %>
+    
+    <% elsif member.rejected? %>
+    
+      <%= image_tag 'refinery/icons/cross.png', :tooltip => t('account_rejected', :scope => 'admin.members') %>
+    
     <% elsif member.lapsed? %>
+    
       <%= image_tag 'refinery/icons/clock_red.png', :tooltip => t('account_expired', :scope => 'admin.members') %>
+      
+    <% elsif member.active? %>
+    
+      <%= image_tag 'refinery/icons/tick.png', :tooltip => t('account_active', :scope => 'admin.members') %>
+      
+    <% elsif confirmation == 'email' && member.unconfirmed? %>
+    
+      <%= image_tag 'refinery/icons/new_account.png', :tooltip => t('account_not_activated', :scope => 'admin.members') %>  
+      
+    <% elsif member.undecided? %>
+    
+      <%= image_tag 'refinery/icons/new_account.png', :tooltip => t('new_account', :scope => 'admin.members') %>
+    
     <% end %>
   </td>
   <td>
     <span style="white-space:nowrap" class="actions row_actions">
-    <% if member.enabled %>
-      <%= link_to refinery_icon_tag('date_add.png'), extend_admin_member_path(member),
-        :title => t('extend', :scope => 'admin.members'), :class => 'extend' if RefinerySetting::find_or_set('memberships_timed_accounts', true) && (member.lapsed? || member.almost_lapsed?) %>
-      <%= link_to refinery_icon_tag('thumb_down.png'), cancel_admin_member_path(member.id),
-        :title => t('cancel', :scope => 'admin.members'), :class => 'disable' %>
-    <% else %>
-    <% if member.is_new %>
-      <%= link_to refinery_icon_tag('thumb_up.png'), accept_admin_member_path(member),
-        :title => t('accept', :scope => 'admin.members'), :class => 'accept' %>
-      <%= link_to refinery_icon_tag('thumb_down.png'), reject_admin_member_path(member),
-        :title => t('reject', :scope => 'admin.members'), :class => 'reject' %>
-      <% else %>
-        <%= link_to refinery_icon_tag('thumb_up.png'), enable_admin_member_path(member),
-          :title => t('enable', :scope => 'admin.members'), :class => 'enable' %>
-      <% end %>  
+		 <span class="row_menu">    
+    <% if confirmation == 'no' %>
+        
+      <%= extend(member) if timed && (member.lapsed? || member.almost_lapsed? || member.never_member?) %>
+      
+      <%= disable(member)   if member.enabled? %>
+      <%= enable(member) if member.disabled? %>
+      
+      <%= accept(member) if member.rejected? %>
+      <%= reject(member) if member.accepted? %>
+      
+    <% elsif confirmation == 'email' %>
+     
+      <%= extend(member) if timed && member.confirmed? && (member.lapsed? || member.almost_lapsed || member.never_member?) %>
+      
+      <%= disable(member)   if member.confirmed? && member.enabled? %>
+      <%= enable(member) if member.confirmed? && member.disabled? %>
+      
+      <%= accept(member) if member.rejected? %>
+      <%= reject(member) if member.accepted? %>       
+  
+    <% elsif confirmation == 'admin' %>
+    
+      <%= extend(member) if timed && !member.undefined? && (member.lapsed? || member.almost_lapsed || member.never_member?) %>
+      
+      <%= disable(member)   if !member.undefined? && member.enabled? %>
+      <%= enable(member) if !member.undefined? && member.disabled? %>
+      
+      <%= accept(member) if member.undefined? || member.rejected? %>
+      <%= reject(member) if member.undefined? || member.accepted? %>    
+  
     <% end %>
-    <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_member_path(member),
-      :title => t('edit', :scope => 'admin.members') %>
-    <%= link_to refinery_icon_tag('delete.png'), admin_member_path(member),
-      :class => "cancel confirm-delete",
-      :title => t('delete', :scope => 'admin.members'),
-      :confirm => t('message', :scope => 'shared.admin.delete', :title => member.full_name),
-      :method => :delete %>
+    
+    <%= edit(member) %>    
+      
+    </span>
     </span>
   </td>
+
 </tr>
