--- a/app/views/admin/members/_members.html.erb
+++ b/app/views/admin/members/_members.html.erb
@@ -1,23 +1,6 @@
 <% if @members.any? %>
 <%= will_paginate @members %>
-<table id="members" cellpadding="0" cellspacing="0" style="visibility: hidden; width: 650px;">
-  <thead>
-    <tr>
-      <th align="center" class="sortable"><%= Member.human_attribute_name :name %></th>
-      <th align="center" class="sortable"><%= Member.human_attribute_name :organization %></th>
-      <th align="center" class="sortable"><%= Member.human_attribute_name :email %></th>
-      <th align="center" class="sortable"><%= Member.human_attribute_name :created_at %></th>
-      <% if RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
-      <th align="center" class="sortable"><%= Member.human_attribute_name :member_until %></th>
-      <% end %>
-      <th align="center" class="sortable width_35"><%= Member.human_attribute_name :status %></th>
-      <th align="center" class="width_80"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render :partial => 'admin/members/member', :collection => @members if @members %>
-  </tbody>
-</table>
+<%= render :partial => 'admin/members/members_table' %>
 <% else %>
 <p>
   <strong><%= t('no_members_yet', :scope => 'admin.members')%></strong>
