--- a/app/views/admin/members/_members.html.erb
+++ b/app/views/admin/members/_members.html.erb
@@ -1,6 +1,16 @@
-<% if @members.any? %>
-<%= will_paginate @members %>
-<%= render :partial => 'admin/members/members_table' %>
+<% if @members.any? || (params['filter_by'].present?) %>
+<div class="pagination_and_filter">
+	<% p = will_paginate @members %>
+	<% if p.blank? %>
+		<div class="pagination"></div>
+	<% else %>
+		<%= p %>
+	<% end %>
+	<%= render :partial => 'admin/members/members_filter' %>
+</div>
+<div class="<%= ['pagination_frame', pagination_css_class].compact.join(' ')%>">
+	<%= render :partial => 'admin/members/members_table' %>
+</div>
 <% else %>
 <p>
   <strong><%= t('no_members_yet', :scope => 'admin.members')%></strong>
