--- a/app/views/admin/memberships/_email_setting.html.erb
+++ b/app/views/admin/memberships/_email_setting.html.erb
@@ -1,5 +1,5 @@
-<p class="field checkbox">
+<p id="email_<%= email_setting %>" class="field checkbox" style="<%= 'display: none' if disabled %>">
   <%= hidden_field_tag "settings[memberships_deliver_mail_on_#{email_setting}]", false, :id => '' %>
-  <%= check_box_tag "settings[memberships_deliver_mail_on_#{email_setting}]", true, RefinerySetting.find_or_set("memberships_deliver_mail_on_#{email_setting}", true) %>
+	<%= check_box_tag "settings[memberships_deliver_mail_on_#{email_setting}]", true, RefinerySetting.find_or_set("memberships_deliver_mail_on_#{email_setting}", true), :disabled => disabled %>
   <label for="<%= "settings_memberships_deliver_mail_on_#{email_setting}" %>"><%= t(email_setting, :scope => 'admin.membership_emails') %></label>
 </p>
