--- a/app/views/admin/memberships/_settings_signup.html.erb
+++ b/app/views/admin/memberships/_settings_signup.html.erb
@@ -70,6 +70,8 @@
 			var val = $(this).val();
 			$('#email_member_accepted')[val == 'admin' ? 'show' : 'hide']();
 			$('#email_member_accepted input').attr('disabled', val == 'admin' ? '' : 'disabled');
+			$('#email_member_rejected')[val == 'admin' ? 'show' : 'hide']();
+			$('#email_member_rejected input').attr('disabled', val == 'admin' ? '' : 'disabled');
 		});
 
   });
