--- a/app/views/admin/members/_member.html.erb
+++ b/app/views/admin/members/_member.html.erb
@@ -49,8 +49,8 @@
       <%= disable(member)   if member.enabled? %>
       <%= enable(member) if member.disabled? %>
       
-      <%= accept(member) if member.rejected? %>
-      <%= reject(member) if member.accepted? %>
+      <%#= accept(member) if member.rejected? %>
+      <%#= reject(member) if member.accepted? %>
       
     <% elsif confirmation == 'email' %>
      
@@ -59,8 +59,8 @@
       <%= disable(member)   if member.confirmed? && member.enabled? %>
       <%= enable(member) if member.confirmed? && member.disabled? %>
       
-      <%= accept(member) if member.rejected? %>
-      <%= reject(member) if member.accepted? %>       
+      <%#= accept(member) if member.rejected? %>
+      <%#= reject(member) if member.accepted? %>       
   
     <% elsif confirmation == 'admin' %>
     
@@ -75,6 +75,7 @@
     <% end %>
     
     <%= edit(member) %>    
+    <%= delete(member) %>    
       
     </span>
     </span>
