--- a/app/views/admin/memberships/_settings_email_delivery.html.erb
+++ b/app/views/admin/memberships/_settings_email_delivery.html.erb
@@ -9,6 +9,7 @@
 		<% disabled = false %>	
     <% disabled = true if email.title == 'membership_extended' && !RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
     <% disabled = true if email.title == 'member_accepted' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
+    <% disabled = true if email.title == 'member_rejected' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
       
         
 		<%= render :partial => 'email_setting', :locals => {:email_setting => email.title, :disabled => disabled} %>
