--- a/app/views/members/_login_form.html.erb
+++ b/app/views/members/_login_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for User.new, :url => new_user_session_path do | f | %>
 <p>
-  <%= f.label :login, t('.login') %>
+  <%= f.label :login, t('.username') %>
   <%= f.text_field :login %>
 </p>
 <p>
