--- a/app/views/admin/memberships/_settings_email_delivery.html.erb
+++ b/app/views/admin/memberships/_settings_email_delivery.html.erb
@@ -1,18 +1,32 @@
 <div id="email_delivery" class="dialog_area" style="display: none;">
   <h3><%= t('deliver_notifications_on', :scope => 'admin.membership_emails.settings')%>:</h3>
-  <% if @membership_emails.any? %>
-  <% @membership_emails.each do | email | %>
-  
-    <% next if email.title == 'member_created' %>
-    <% next if email.title == 'member_activated' %>
 
-		<% disabled = false %>	
-    <% disabled = true if email.title == 'membership_extended' && !RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
-    <% disabled = true if email.title == 'member_accepted' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
-    <% disabled = true if email.title == 'member_rejected' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
-      
-        
-		<%= render :partial => 'email_setting', :locals => {:email_setting => email.title, :disabled => disabled} %>
+  <%= fields_for :member_accepted, @member_accepted do | f | %>
+  <p id="email_member_accepted" class="field checkbox" style="<%= 'display: none' if @memberships_confirmation.value != 'admin' %>">
+    <%= f.check_box :value, {}, true, false %>
+    <%= f.label :value, t('member_accepted', :scope => 'admin.membership_emails') %>
+  </p>
   <% end %>
+  
+  <%= fields_for :member_rejected, @member_rejected do | f | %>
+  <p id="email_member_rejected" class="field checkbox" style="<%= 'display: none' if @memberships_confirmation.value != 'admin' %>">
+    <%= f.check_box :value, {}, true, false %>
+    <%= f.label :value, t('member_rejected', :scope => 'admin.membership_emails') %>
+  </p>
   <% end %>
+  
+  <%= fields_for :member_deleted, @member_deleted do | f | %>
+  <p id="email_member_deleted" class="field checkbox">
+    <%= f.check_box :value, {}, true, false %>
+    <%= f.label :value, t('member_deleted', :scope => 'admin.membership_emails') %>
+  </p>
+  <% end %>
+  
+  <%= fields_for :membership_extended, @membership_extended do | f | %>
+  <p id="email_membership_extended" class="field checkbox" style="<%= 'display: none' if @memberships_timed_accounts.value.to_s == 'true' %>">
+    <%= f.check_box :value, {}, true, false %>
+    <%= f.label :value, t('membership_extended', :scope => 'admin.membership_emails') %>
+  </p>
+  <% end %>
+  
 </div>
