--- a/app/views/refinery/memberships/admin/membership_emails/_emails.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_emails.html.erb
@@ -1,12 +1,12 @@
 
     <ul class="<%= ['pagination_frame', pagination_css_class].compact.join(' ') %>">
       <% @membership_emails.each do | email | %>
-        <% next if email.title == 'membership_extended' && !RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
+        <% next if email.title == 'membership_extended' && !Refinery::Setting::find_or_set('memberships_timed_accounts', true) %>
         
-        <% next if email.title == 'member_accepted' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
-        <% next if email.title == 'member_rejected' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
+        <% next if email.title == 'member_accepted' && Refinery::Setting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
+        <% next if email.title == 'member_rejected' && Refinery::Setting::find_or_set('memberships_confirmation', 'admin') != 'admin' %>
         
-        <% next if email.title == 'member_activated' && RefinerySetting::find_or_set('memberships_confirmation', 'admin') != 'email' %>
+        <% next if email.title == 'member_activated' && Refinery::Setting::find_or_set('memberships_confirmation', 'admin') != 'email' %>
         
         
         <%= render :partial => "email", :locals => {:email => email} %>
