--- a/app/views/refinery/memberships/admin/members/_members_filter.html.erb
+++ b/app/views/refinery/memberships/admin/members/_members_filter.html.erb
@@ -8,8 +8,8 @@
 				[t('active', :scope => 'admin.members.filter'), 'active'],
 				[t('disabled', :scope => 'admin.members.filter'), 'disabled'],
 		]
-		options << [t('rejected', :scope => 'admin.members.filter'), 'rejected'] if RefinerySetting::find_or_set('memberships_confirmation', 'admin') == 'admin'
-		options << [t('unconfirmed', :scope => 'admin.members.filter'), 'unconfirmed'] if RefinerySetting::find_or_set('memberships_confirmation', 'admin') == 'email' 
+		options << [t('rejected', :scope => 'admin.members.filter'), 'rejected'] if Refinery::Setting::find_or_set('memberships_confirmation', 'admin') == 'admin'
+		options << [t('unconfirmed', :scope => 'admin.members.filter'), 'unconfirmed'] if Refinery::Setting::find_or_set('memberships_confirmation', 'admin') == 'email' 
 	%>
 	<%= select_tag 'filter_by', options_for_select(options, f) %>
 </div>
