renamed shared to refinery in views and members_helper

--- a/app/views/refinery/memberships/admin/roles/_role.html.erb
+++ b/app/views/refinery/memberships/admin/roles/_role.html.erb
@@ -8,7 +8,7 @@
           <%= link_to refinery_icon_tag('delete.png'), admin_role_path(role),
                       :class => "cancel confirm-delete",
                       :title => t('delete', :scope => 'admin.roles'),
-                      :confirm => t('message', :scope => 'shared.admin.delete', :title => role.title),
+                      :confirm => t('message', :scope => 'refinery.admin.delete', :title => role.title),
                       :method => :delete %>
         </span>
       </li>
