--- a/app/views/refinery/memberships/admin/members/_form.html.erb
+++ b/app/views/refinery/memberships/admin/members/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= render :partial => "/shared/admin/error_messages",
+<%= render :partial => "/refinery/admin/error_messages",
 :locals => {
   :object => @member,
   :include_object_name => false
@@ -14,13 +14,13 @@
 
 <%= hidden_field_tag :redirect_to_url, request.referrer %>
 
-<%= render :partial => "/shared/admin/form_actions",
+<%= render :partial => "/refinery/admin/form_actions",
 :locals => {
   :f => f,
   :continue_editing => false,
   :hide_cancel => (@app_dialog or action_name == "insert" or from_dialog?),
   :delete_title => t('delete', :scope => 'admin.members'),
-  :delete_confirmation => (t('message', :scope => 'shared.admin.delete',
+  :delete_confirmation => (t('message', :scope => 'refinery.admin.delete',
   :title => @member.full_name) if @member.persisted?)
 } %>
 <% end -%>
