--- a/app/views/refinery/memberships/admin/membership_emails/_parts.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_parts.html.erb
@@ -1,5 +1,5 @@
 <% if searching? %>
-  <h2><%= t('results_for', :scope => 'shared.admin.search', :query => params[:search]) %></h2>
+  <h2><%= t('results_for', :scope => 'refinery.admin.search', :query => params[:search]) %></h2>
 <% end %>
 <% if @membership_email_parts.any? %>
 <div id='admin_membership_email_parts' class="pagination_container">
