--- a/app/views/refinery/memberships/admin/roles/_form.html.erb
+++ b/app/views/refinery/memberships/admin/roles/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [:admin, @role], :url => @url_override || @url do |f| -%>
 
-  <%= render :partial => "/shared/admin/error_messages",
+  <%= render :partial => "/refinery/admin/error_messages",
              :locals => {
                :object => @role,
                :include_object_name => false
@@ -11,14 +11,14 @@
     <%= f.text_field :title, :class => 'widest' %>
   </div>
 
-  <%= render :partial => "/shared/admin/form_actions",
+  <%= render :partial => "/refinery/admin/form_actions",
              :locals => {
                :f => f,
                :continue_editing => false,
                :hide_cancel => false,
                :hide_delete => (@role.new_record?),
                :delete_title => t('delete', :scope => 'admin.roles'),
-               :delete_confirmation => (t('message', :scope => 'shared.admin.delete',
+               :delete_confirmation => (t('message', :scope => 'refinery.admin.delete',
                                         :title => @role.title) if @role.persisted?)
                                       } %>
 <% end -%>
