--- a/app/views/refinery/memberships/members/edit.html.erb
+++ b/app/views/refinery/memberships/members/edit.html.erb
@@ -1,11 +1,11 @@
 <% content_for :body_content_left do %>
-  <%=raw @page[:body_above] if @page %>
+  <%=raw @page.content_for(:body_above) if @page %>
   <div id="edit-member-form">
     <%= render :partial => 'form',
       :locals => {
       :url => members_path }%>
   </div>
-  <%=raw @page[:body_below] if @page %>
+  <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
 <%= render :partial => "/shared/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
