--- a/app/views/refinery/memberships/members/login.html.erb
+++ b/app/views/refinery/memberships/members/login.html.erb
@@ -1,8 +1,8 @@
 <% content_for :body_content_left do %>
-  <%=raw @page[:body_above] if @page %>
+  <%=raw @page.content_for(:body_above) if @page %>
   <%= render :partial => 'message' %>
   <%= render :partial => 'login_form' %>
-  <%=raw @page[:body_below] if @page %>
+  <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
 <%= render :partial => "/shared/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
