renamed more paths from shared to refinery

--- a/app/views/refinery/memberships/members/_message.html.erb
+++ b/app/views/refinery/memberships/members/_message.html.erb
@@ -9,4 +9,4 @@ $(document).ready(function(){
 });
 </script>
 <% end %>
-<%= render :partial => '/shared/message' %>
+<%= render :partial => '/refinery/message' %>
