--- a/app/views/refinery/memberships/members/new.html.erb
+++ b/app/views/refinery/memberships/members/new.html.erb
@@ -9,4 +9,4 @@
   <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
-<%= render :partial => "/shared/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
+<%= render :partial => "/refinery/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
