--- a/app/views/refinery/memberships/members/edit.html.erb
+++ b/app/views/refinery/memberships/members/edit.html.erb
@@ -8,5 +8,5 @@
   <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
-<%= render :partial => "/shared/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
+<%= render :partial => "/refinery/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
 
