--- a/app/views/refinery/memberships/members/profile.html.erb
+++ b/app/views/refinery/memberships/members/profile.html.erb
@@ -10,4 +10,4 @@
   <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
-<%= render :partial => "/shared/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
+<%= render :partial => "/refinery/content_page", :locals => {:hide_sections => [:bodybelow, :bodyabove]} %>
