--- a/app/views/refinery/memberships/admin/roles/index.html.erb
+++ b/app/views/refinery/memberships/admin/roles/index.html.erb
@@ -3,5 +3,6 @@
   <%= render :partial => 'records' %>
 </div>
 <div id='actions'>
-  <%= render :partial => '/refinery/memberships/admin/shared/memberships_actions' %>
+  <%= render :partial => '/refinery/memberships/admin/shared/memberships_actions',
+              :locals => {:section => 'roles'} %>
 </div>
